<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:background="@drawable/cornwall">
    
    <TextView
        android:id="@+id/textViewCommmodity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enter_Commodity"
        android:textColor="#000000"/>
    
   <LinearLayout 
       xmlns:android="http://schemas.android.com/apk/res/android"
       android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content">

    <EditText
        android:id="@+id/EditTextCommodity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/Recognition_results"
        android:hint="@string/Commodity_goes_here"
        android:textColor="#000000"/>
    
    <ImageButton
        android:id="@+id/ButtonCommodity"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:src="@drawable/mic" />
    <!--  
    <Button 
    	android:id="@+id/ButtonCommodity" 
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:drawableLeft="@drawable/mic"
		/>
	-->
     </LinearLayout>
     
     <TextView
        android:id="@+id/textViewVariety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enter_Variety"
        android:textColor="#000000" />
     
     <LinearLayout 
       xmlns:android="http://schemas.android.com/apk/res/android"
       android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content">
     
    <EditText
        android:id="@+id/EditTextVariety"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/Recognition_results"
        android:hint="@string/Variety_goes_here"
        android:textColor="#000000" />
    
    <ImageButton
        android:id="@+id/ButtonVariety"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:src="@drawable/mic" />
    
    <!--  
    <Button 
        android:id="@+id/ButtonVariety" 
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/Speak_Variety"/>
	-->
    </LinearLayout>
    
    <TextView
        android:id="@+id/textViewMarket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enter_Market"
        android:textColor="#000000" />
     
     <LinearLayout 
       xmlns:android="http://schemas.android.com/apk/res/android"
       android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content">
    
    <EditText
        android:id="@+id/EditTextMarket"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/Recognition_results"
        android:hint="@string/Market_goes_here"
        android:textColor="#000000" />
    
    <ImageButton
        android:id="@+id/ButtonMarket"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:src="@drawable/mic" />
    
    <!--  
    <Button 
        android:id="@+id/ButtonMarket" 
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/Speak_Market"/>
    -->
    </LinearLayout>
    
    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enter_Date"
        android:textColor="#000000" />
    
    <LinearLayout 
       xmlns:android="http://schemas.android.com/apk/res/android"
       android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content">
    
    <EditText
        android:id="@+id/EditTextDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:hint="@string/Date_goes_here"
        android:textColor="#000000" />
    
    </LinearLayout>
    
     <Button 
        android:id="@+id/ButtonSubmit" 
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="0"
		android:layout_gravity="center_horizontal"  
		android:text="@string/Submit"/>
	
</LinearLayout>
